[package]
name = "and_then_map_err"
version = "1.0.0"
authors = ["mpyw <mpyw628@gmail.com>"]
edition = "2021"
rust-version = "1.80.0"
description = "Provides traits for chaining Result operations with different error types WITHOUT the need for intermediate map_err calls."
repository = "https://github.com/yumemi-inc/and_then_map_err"
license = "MIT"
include = ["/src", "LICENSE"]
keywords = ["map_err", "result", "error", "error-conversion", "error-handling"]
categories = ["rust-patterns"]

[dependencies]

[dev-dependencies]
thiserror = "1"
